--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
 	"name": "node-git-version",
 	"description": "Node.js application for creating version file of git repository",
- 	"version": "0.1.1",
+ 	"version": "1.0.0",
  	"main": "index.js",
  	"bin": "index.js",
-	"dependencies": 
-	{
-	},
+	"dependencies": {},
 	"keywords": [
 		"git",
 		"nodejs",
@@ -14,11 +12,11 @@
 		"version",
 		"prizma"
 	],
-	"author": "maxxie <mast@imast.ru> (https://prizma.mobi)",
+	"author": "BilliAlpha <billi.pamege.300@gmail.com>",
 	"license": "MIT",
 	"repository" :
 	{
 		"type" : "git",
-		"url" : "https://github.com/prizma/node-git-version.git"
+		"url" : "https://github.com/BilliAlpha/node-git-version.git"
 	}
 }
